--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Vue Cinema</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__poster">
+            <i class="far fa-film header__icon"></i>
+            <p class="header__text">See no special offer restrictions</p>
+        </div>
+    </header>
 </body>
 </html>
